Version 3.20

2019-10-07 release(3.20.3025)
* FEATURE: Added support for disabling network providers via compile time options.
* IMPROVEMENT: PDU V1 marked as deprecated.
* IMPROVEMENT: Return NA(GEN-02), instead of FAIL(KEY-01), when certificate is not found during key-based verification. Verification error code KEY-01 is deprecated.
* IMPROVEMENT: New verification rules for calendar hash chain reception from extending service (returning NA(GEN-2) in case of a service failure).
* IMPROVEMENT: KSI_RuleVerificationResult has additional fields with error information. Will be filled in case verification result is NA(GEN-2).
* IMPROVEMENT: Value returned by KSI_getHashAlgorithmByName must be verified with KSI_isHashAlgorithmSupported and KSI_isHashAlgorithmTrusted.
* IMPROVEMENT: KSI_CalendarTimeToUnixTime no longer depends on non-portable timegm.
* BUGFIX: Fixed TreeBuilder masking algorithm.
* BUGFIX: Metadata is now placed into the first link when using KSI_BlockSigner with blinding mask.
* BUGFIX: Constant variable KSI_HASHALG_INVALID is exported with DLL.
* BUGFIX: Resolved compilation warnings.

Version 3.19

2019-02-20 release(3.19.2939)
* BUGFIX: Fixed ABI version.
* BUGFIX: Enhanced backward compatibility with hash algorithm enum values.

2019-01-30 release(3.19.2919)
* FEATURE: Added new async handle state KSI_ASYNC_STATE_ERROR_NOTICE for returning errors that whould be otherwise resolved internally (eg. in case of high availability where one of the configured endpoint encounter connection issues).
* FEATURE: Added new option KSI_ASYNC_OPT_CONF_CONSOLIDATE_CALLBACK for overriding default consolidation handling.
* FEATURE: Added async service option KSI_ASYNC_OPT_CONNECTION_STATE_CALLBACK for setting connection state listener.
* FEATURE: Added prefix string format support to KSI_LOG_logBlob. Interface remains fully backwards compatible.
* FEATURE: Added find function to KSI_List interface.
* IMPROVEMENT: Helper interface for creating signing KSI_AsyncHandle.